examples/errors/typing/let_pattern_error_rhs.cn
fun first : Int -> Int [pure] = {
    n -> let (x, y, z) = unknown_call();
         x + y + z
}
main : Int [pure] = first(1)
